Finally fix navbar width when theres a scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -112,9 +112,3 @@ hr
 {
     image-rendering: pixelated;
 }
-
-.ignore-scrollbar
-{
-    padding-left: calc(100vw - 100%);
-    padding-right: 0px;
-}
